--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,3 +32,16 @@ jobs:
 
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=src
+  code-quality-and-security:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+
+      - name: Analyze
+        uses: github/codeql-action/analyze@v1
